syntax = "proto3";

package domain;
option go_package = "marketplace-services/pkg/domain";

message Trade {
    uint64 id = 1;
    string provider = 2;
    string consumer = 3;
    string broker = 4;
    uint64 product = 5;
    uint64 startTime = 6;
    uint64 endTime = 7;
    uint64 cost = 8;
    string settlementContract = 9;
}